--- a/Python_basics.ipynb
+++ b/Python_basics.ipynb
@@ -318,10 +318,10 @@
       "metadata": {
         "id": "EMzntyqsX4-V",
         "colab_type": "code",
-        "outputId": "eb10a48e-1500-48ed-c4e5-a6615ccbc9ca",
+        "outputId": "4328db64-c1dd-4806-edea-5dfdfacd63ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 527
+          "height": 697
         }
       },
       "source": [
@@ -335,11 +335,13 @@
         "  print(\" x = \"+str(id(x)))\n",
         "  print(\" y = \"+str(id(y)))\n",
         "  print(y)\n",
+        "  tup = (y,y+x)\n",
+        "  print(tup)\n",
         "  x,y=y,y+x\n",
         "  \n",
         "  "
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,33 +349,43 @@
             " x = 10968768\n",
             " y = 10968800\n",
             "1\n",
+            "(1, 1)\n",
             " x = 10968800\n",
             " y = 10968800\n",
             "1\n",
+            "(1, 2)\n",
             " x = 10968800\n",
             " y = 10968832\n",
             "2\n",
+            "(2, 3)\n",
             " x = 10968832\n",
             " y = 10968864\n",
             "3\n",
+            "(3, 5)\n",
             " x = 10968864\n",
             " y = 10968928\n",
             "5\n",
+            "(5, 8)\n",
             " x = 10968928\n",
             " y = 10969024\n",
             "8\n",
+            "(8, 13)\n",
             " x = 10969024\n",
             " y = 10969184\n",
             "13\n",
+            "(13, 21)\n",
             " x = 10969184\n",
             " y = 10969440\n",
             "21\n",
+            "(21, 34)\n",
             " x = 10969440\n",
             " y = 10969856\n",
             "34\n",
+            "(34, 55)\n",
             " x = 10969856\n",
             " y = 10970528\n",
-            "55\n"
+            "55\n",
+            "(55, 89)\n"
           ],
           "name": "stdout"
         }
@@ -383,6 +395,66 @@
       "cell_type": "code",
       "metadata": {
         "id": "OyeiGHWgbkRD",
+        "colab_type": "code",
+        "outputId": "85682c78-4cdb-4d92-9774-a06d506f1862",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        }
+      },
+      "source": [
+        "from sys import argv \n",
+        "a,b,c=argv\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py\n",
+            "-f\n",
+            "/root/.local/share/jupyter/runtime/kernel-ecf60dfe-76c0-43d1-99bc-2345d2a8de2e.json\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YM3c84c0A5Q0",
+        "colab_type": "code",
+        "outputId": "8e496d75-76d4-4098-9dc2-982bc4b6875f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        }
+      },
+      "source": [
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py\n",
+            "-f\n",
+            "/root/.local/share/jupyter/runtime/kernel-ecf60dfe-76c0-43d1-99bc-2345d2a8de2e.json\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7g9v6tZnST6w",
         "colab_type": "code",
         "colab": {}
       },
