--- a/Manipulating_Data_with_NumPy_Code_Along.ipynb
+++ b/Manipulating_Data_with_NumPy_Code_Along.ipynb
@@ -138,16 +138,16 @@
       "metadata": {
         "id": "rQc1vE4tZeDZ",
         "colab_type": "code",
+        "outputId": "99eebc44-9384-419d-cd1d-949db1ea3d70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        },
-        "outputId": "99eebc44-9384-419d-cd1d-949db1ea3d70"
+        }
       },
       "source": [
         "data_ipl[:,3]"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,18 +180,18 @@
       "metadata": {
         "id": "yEZHhdgoZeDd",
         "colab_type": "code",
+        "outputId": "044364cf-9c28-440c-a0dc-7b9d3076c15c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "044364cf-9c28-440c-a0dc-7b9d3076c15c"
+        }
       },
       "source": [
         "# How many matches were held in total we need to know so that we can analyze further statistics keeping that in mind.\n",
         "print(len(set(data_ipl[:,0])))\n",
         "print(np.unique(data_ipl[:,0]))"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,11 +218,11 @@
       "metadata": {
         "id": "P-pRwSdeZeDg",
         "colab_type": "code",
+        "outputId": "b709a9bf-e5e6-406f-9f4e-7cb3483b1b21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
-        },
-        "outputId": "b709a9bf-e5e6-406f-9f4e-7cb3483b1b21"
+        }
       },
       "source": [
         "# this exercise deals with you getting to know that which are all those six teams that played in the tournament.\n",
@@ -232,7 +232,7 @@
         "print(np.unique(data_ipl[:,3:5]))\n",
         "print(len(np.unique(data_ipl[:,3:5])))"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,18 +279,18 @@
       "metadata": {
         "id": "JAM9i1RDZeDk",
         "colab_type": "code",
+        "outputId": "aa236d19-6cee-44c0-f965-ce4672e1ab6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "aa236d19-6cee-44c0-f965-ce4672e1ab6e"
+        }
       },
       "source": [
         "# An exercise to make you familiar with indexing and slicing up within data.\n",
         "print(data_ipl[:,17])\n",
         "np.sum(data_ipl[:,17].astype(np.int))"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,18 +328,18 @@
       "metadata": {
         "id": "JArjQv4_ZeDn",
         "colab_type": "code",
+        "outputId": "9e7e1cbc-06c8-4b0f-af3c-edd2acd3b56b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 242
-        },
-        "outputId": "9e7e1cbc-06c8-4b0f-af3c-edd2acd3b56b"
+        }
       },
       "source": [
         "d=data_ipl[data_ipl[:,20] != '']\n",
         "print(d[:,11])\n",
         "print(d[:,21])"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,22 +390,23 @@
       "metadata": {
         "id": "Ihagxtd5ZeDr",
         "colab_type": "code",
+        "outputId": "72494d2d-0316-451e-bc9f-b3ad409f9a20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "e4f34761-04fb-425a-f47f-9836a1819bd9"
+        }
       },
       "source": [
         "# this exercise will help you get the statistics on one particular team\n",
-        "print(len(data_ipl[data_ipl[:,5] == 'Mumbai Indians']))"
+        "recordsWithMumbaiTossWin=data_ipl[data_ipl[:,5] == 'Mumbai Indians']\n",
+        "print(len(np.unique(recordsWithMumbaiTossWin[:,0])))"
       ],
-      "execution_count": 48,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "472\n"
+            "2\n"
           ],
           "name": "stdout"
         }
@@ -426,11 +427,11 @@
       "metadata": {
         "id": "SFXl8xswZeDu",
         "colab_type": "code",
+        "outputId": "60fa6351-5cc8-4227-b409-77c1df946aac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 155
-        },
-        "outputId": "60fa6351-5cc8-4227-b409-77c1df946aac"
+        }
       },
       "source": [
         "# An exercise to know who is the most aggresive player or maybe the scoring player \n",
@@ -442,7 +443,7 @@
         "print(sixes)\n",
         "print(batsman[np.argmax(sixes)])"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
