--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -30,19 +30,23 @@
       "metadata": {
         "id": "kSyR0aaeyShc",
         "colab_type": "code",
-        "outputId": "56d9823d-9f0c-4806-862b-14412addf12a",
+        "outputId": "944896f9-f93c-4042-8636-7f006a7990b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 138
+          "height": 207
         }
       },
       "source": [
         "import numpy as np\n",
         "a1=np.array([[1,2,3],[4,5,6]])\n",
         "\n",
-        "print(a1.size)\n",
-        "print(a1.shape)\n",
-        "print(len(a1))\n",
+        "print(\"Size :\",a1.size)\n",
+        "print(\"Dimensiom :\",a1.ndim)\n",
+        "print(\"Data type\",a1.dtype)\n",
+        "print(\"Size of datatype in bytes\",a1.itemsize)\n",
+        "print(\"Total size in bytes\",a1.nbytes)\n",
+        "print(\"m X n\",a1.shape)\n",
+        "print(\"Length of rows\",len(a1))\n",
         "print(a1[::-1])\n",
         "print(a1[:,1:])"
       ],
@@ -51,9 +55,13 @@
         {
           "output_type": "stream",
           "text": [
-            "6\n",
-            "(2, 3)\n",
-            "2\n",
+            "Size : 6\n",
+            "Dimensiom : 2\n",
+            "Data type int64\n",
+            "Size of datatype in bytes 8\n",
+            "Total size in bytes 48\n",
+            "m X n (2, 3)\n",
+            "Length of rows 2\n",
             "[[4 5 6]\n",
             " [1 2 3]]\n",
             "[[2 3]\n",
@@ -62,19 +70,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aQcoFV2ROqbx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -395,11 +390,11 @@
       "metadata": {
         "id": "eqSHcDfbOrww",
         "colab_type": "code",
+        "outputId": "64570dc7-d06c-4202-be53-9010ed6f4226",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 155
-        },
-        "outputId": "64570dc7-d06c-4202-be53-9010ed6f4226"
+        }
       },
       "source": [
         "a = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
@@ -407,7 +402,7 @@
         "print(np.delete(a,1,0)) # (array,index,axis (0=row, 1=column))\n",
         "print(a)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,6 +415,422 @@
             "[[1 2 3]\n",
             " [4 5 6]\n",
             " [7 8 9]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A1IMDCz0k7Sk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a1=np.array([1,2,3])\n",
+        "a2=np.ndarray([1,2,3],dtype=int)\n",
+        "print(a1)\n",
+        "print(a2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JbHUgpPCXZsp",
+        "colab_type": "text"
+      },
+      "source": [
+        "The eye tool returns a 2-D array with 's as the diagonal and 's elsewhere. The diagonal can be main, upper or lower depending on the optional parameter . A positive  is for the upper diagonal, a negative  is for the lower, and a   (default) is for the main diagonal."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f5kAhCtxW4sk",
+        "colab_type": "code",
+        "outputId": "91cd25db-327e-4089-e1a3-919650777f2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 570
+        }
+      },
+      "source": [
+        "print(np.eye(8, 7, k = 1))\n",
+        "print(np.eye(8, 7, k = -2))\n",
+        "print(np.eye(8, 7, k = -933))\n",
+        "print(np.eye(8, 7))\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 1.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]]\n",
+            "[[0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [1. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 0.]]\n",
+            "[[0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]]\n",
+            "[[1. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 1.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jM92Kz-VYwvm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "N,M=tuple([int(i) for i in input().strip().split(' ')])\n",
+        "print(numpy.eye((N,M)))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nHoCv0m6kvao",
+        "colab_type": "text"
+      },
+      "source": [
+        "https://thispointer.com/find-the-index-of-a-value-in-numpy-array/\n",
+        "\n",
+        "Index of element in 1D Numpy array"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "axG9gqeJkr9u",
+        "colab_type": "code",
+        "outputId": "c40d2602-6c9e-4d7e-f7ad-b9d0e8995b06",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        }
+      },
+      "source": [
+        "arr1=np.array([1,2,3,4,5,6,7,5,6,7,8,9],dtype=int)\n",
+        "print(arr1)\n",
+        "\n",
+        "index=np.where(arr1==5) \n",
+        "\n",
+        "print(index)\n",
+        "\n",
+        "print(\"Index of 5 is : {}\".format(index[0]))\n",
+        "print(\"first Index of 5 is : {}\".format(index[0][0]))\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1 2 3 4 5 6 7 5 6 7 8 9]\n",
+            "(array([4, 7]),)\n",
+            "Index of 5 is : [4 7]\n",
+            "first Index of 5 is : 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oT6e0WH0ljQG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Index of element in 2D Numpy array"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d5VPm3e9lmKl",
+        "colab_type": "code",
+        "outputId": "aafe32bc-58e7-429a-d6e7-a6d4ef49943a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        }
+      },
+      "source": [
+        "arr1=np.array([[1,2,3],[4,5,6],[7,5,5]])\n",
+        "print(arr1)\n",
+        "\n",
+        "index=np.where(arr1 == 5)\n",
+        "\n",
+        "print(index)\n",
+        "\n",
+        "rows_index=index[0]\n",
+        "columns_index=index[1]\n",
+        "\n",
+        "coordinates=tuple(zip(rows_index,columns_index))\n",
+        "\n",
+        "print(coordinates)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 5 5]]\n",
+            "(array([1, 2, 2]), array([1, 1, 2]))\n",
+            "((1, 1), (2, 1), (2, 2))\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6xOT63E_51ia",
+        "colab_type": "code",
+        "outputId": "ba767425-815d-4bfc-f60a-4e1ae414a9c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        }
+      },
+      "source": [
+        "# conditions\n",
+        "\n",
+        "array1 = np.arange(9).reshape(3,3)\n",
+        " \n",
+        "print(array1[array1 > 5 and array1 < 8])"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-e3d5af55d9d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0marray1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0marray1\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m5\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0marray1\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GXmVBDUiD-5K",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 397
+        },
+        "outputId": "2b52413c-d8f9-4d79-a14d-a4ba29b167f1"
+      },
+      "source": [
+        "#Addition and sum\n",
+        "\n",
+        "arr1=np.array([[1,2],[3,4],[1,1]])\n",
+        "arr2=np.array([[11,22],[33,44],[2,2]])\n",
+        "print(np.add(arr1,arr2))\n",
+        "print(np.sum(arr1))\n",
+        "\n",
+        "print(np.sum(arr1,axis=0))\n",
+        "print(np.sum(arr1,axis=1))\n",
+        "\n",
+        "# broadcasting\n",
+        "print(\"=\"*20)\n",
+        "arr1=np.array([[1,2,3]])\n",
+        "print(arr1,arr1.T,sep='\\n')\n",
+        "print(np.add(arr1,arr1.T))\n",
+        "print(\"=\"*20)\n",
+        "\n",
+        "\n",
+        "print(\"=\"*20)\n",
+        "\n",
+        "print(np.add(np.array([[1,2,3],[1,2,3],[1,2,3]]),np.array([[1,2,3],[1,2,3],[1,2,3]])))\n"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[12 24]\n",
+            " [36 48]\n",
+            " [ 3  3]]\n",
+            "12\n",
+            "[5 7]\n",
+            "[3 7 2]\n",
+            "====================\n",
+            "[[1 2 3]]\n",
+            "[[1]\n",
+            " [2]\n",
+            " [3]]\n",
+            "[[2 3 4]\n",
+            " [3 4 5]\n",
+            " [4 5 6]]\n",
+            "====================\n",
+            "(1, 3)\n",
+            "(3,)\n",
+            "[[2 4 6]]\n",
+            "====================\n",
+            "[[2 4 6]\n",
+            " [2 4 6]\n",
+            " [2 4 6]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h4wkaAH3Ps8M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "34031025-387d-4fa9-c692-3e577c5ad6dd"
+      },
+      "source": [
+        "arr1=np.array([1,2,3]).reshape(1,3)\n",
+        "arr2=np.array([1,2,3]).reshape(3,)\n",
+        "\n",
+        "print(arr1)\n",
+        "print(arr2)\n",
+        "\n",
+        "print(np.add(arr1,arr2))"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1 2 3]]\n",
+            "[1 2 3]\n",
+            "[[2 4 6]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UPOlEGsLJ_Gx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 190
+        },
+        "outputId": "65c57dc2-e5b9-48d9-f580-46807351da09"
+      },
+      "source": [
+        "# Concatenate\n",
+        "a1=np.array([[1,2,3],[4,5,6]])\n",
+        "a2=np.array([[11,22,33],[44,55,66]])\n",
+        "\n",
+        "print(a1)\n",
+        "print(a2)\n",
+        "print(np.concatenate((a1,a2),axis=0))\n",
+        "\n",
+        "print(np.concatenate((a1,a2),axis=1))\n"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n",
+            "[[11 22 33]\n",
+            " [44 55 66]]\n",
+            "[[ 1  2  3]\n",
+            " [ 4  5  6]\n",
+            " [11 22 33]\n",
+            " [44 55 66]]\n",
+            "[[ 1  2  3 11 22 33]\n",
+            " [ 4  5  6 44 55 66]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IVSpPHETJ_6L",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# linspace"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S9CeM3F2QuGE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "7a571f10-0563-48ab-ef8d-4da9ec34f5a7"
+      },
+      "source": [
+        "print(np.linspace(0,10,10))\n",
+        "print(len(np.linspace(0,10,10)))"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 0.          1.11111111  2.22222222  3.33333333  4.44444444  5.55555556\n",
+            "  6.66666667  7.77777778  8.88888889 10.        ]\n",
+            "10\n"
           ],
           "name": "stdout"
         }
