--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "kSyR0aaeyShc",
         "colab_type": "code",
-        "outputId": "944896f9-f93c-4042-8636-7f006a7990b4",
+        "outputId": "64f23ac2-ad53-412f-d8f1-6ff2bc1221b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 207
@@ -50,7 +50,7 @@
         "print(a1[::-1])\n",
         "print(a1[:,1:])"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,31 +626,30 @@
       "metadata": {
         "id": "6xOT63E_51ia",
         "colab_type": "code",
-        "outputId": "ba767425-815d-4bfc-f60a-4e1ae414a9c1",
+        "outputId": "947dfa2a-cfcb-4baa-c031-07b35970d056",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 200
+          "height": 52
         }
       },
       "source": [
         "# conditions\n",
         "\n",
         "array1 = np.arange(9).reshape(3,3)\n",
+        "\n",
+        "print(array1[array1 > 5])\n",
         " \n",
-        "print(array1[array1 > 5 and array1 < 8])"
+        "print(array1[(array1 > 5) & (array1 < 8)])"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-e3d5af55d9d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0marray1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0marray1\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m5\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0marray1\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-          ]
+          "output_type": "stream",
+          "text": [
+            "[6 7 8]\n",
+            "[6 7]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -659,11 +658,11 @@
       "metadata": {
         "id": "GXmVBDUiD-5K",
         "colab_type": "code",
+        "outputId": "2b52413c-d8f9-4d79-a14d-a4ba29b167f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        },
-        "outputId": "2b52413c-d8f9-4d79-a14d-a4ba29b167f1"
+        }
       },
       "source": [
         "#Addition and sum\n",
@@ -688,7 +687,7 @@
         "\n",
         "print(np.add(np.array([[1,2,3],[1,2,3],[1,2,3]]),np.array([[1,2,3],[1,2,3],[1,2,3]])))\n"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,11 +724,11 @@
       "metadata": {
         "id": "h4wkaAH3Ps8M",
         "colab_type": "code",
+        "outputId": "34031025-387d-4fa9-c692-3e577c5ad6dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        },
-        "outputId": "34031025-387d-4fa9-c692-3e577c5ad6dd"
+        }
       },
       "source": [
         "arr1=np.array([1,2,3]).reshape(1,3)\n",
@@ -740,7 +739,7 @@
         "\n",
         "print(np.add(arr1,arr2))"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,11 +757,11 @@
       "metadata": {
         "id": "UPOlEGsLJ_Gx",
         "colab_type": "code",
+        "outputId": "65c57dc2-e5b9-48d9-f580-46807351da09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 190
-        },
-        "outputId": "65c57dc2-e5b9-48d9-f580-46807351da09"
+        }
       },
       "source": [
         "# Concatenate\n",
@@ -775,7 +774,7 @@
         "\n",
         "print(np.concatenate((a1,a2),axis=1))\n"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,17 +812,17 @@
       "metadata": {
         "id": "S9CeM3F2QuGE",
         "colab_type": "code",
+        "outputId": "af7e92c6-0eae-443a-f513-4299da684b40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        },
-        "outputId": "7a571f10-0563-48ab-ef8d-4da9ec34f5a7"
+        }
       },
       "source": [
         "print(np.linspace(0,10,10))\n",
         "print(len(np.linspace(0,10,10)))"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,6 +830,69 @@
             "[ 0.          1.11111111  2.22222222  3.33333333  4.44444444  5.55555556\n",
             "  6.66666667  7.77777778  8.88888889 10.        ]\n",
             "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "znhgOhLGSYeA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f39d2535-8e0c-4987-c8c2-a6d635d39c43"
+      },
+      "source": [
+        "M,N=np.array(tuple([int(i) for i in ' 2 3'.strip().split(\" \")]))\n",
+        "print(M,N)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_1usAHK8gwNX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "a7506b06-323e-447a-e5ed-5c6f4f80b03a"
+      },
+      "source": [
+        "#Append vs concatenate\n",
+        "\n",
+        "A=np.array([[1,2,3,4],[5,6,7,8]])\n",
+        "B=np.array([[11,22,33,44],[55,66,77,88]])\n",
+        "\n",
+        "print(np.append(A,B)) # by default axis=None result in flatten id array output, axis=0 is row wise and axis=1 is column wise\n",
+        "print(\"=\"*30)\n",
+        "print(np.concatenate((A,B))) # by default axis=0 is row wise ,axis=None is result in flatten id array output, and axis=1 is column wise\n"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 1  2  3  4  5  6  7  8 11 22 33 44 55 66 77 88]\n",
+            "==============================\n",
+            "[[ 1  2  3  4]\n",
+            " [ 5  6  7  8]\n",
+            " [11 22 33 44]\n",
+            " [55 66 77 88]]\n"
           ],
           "name": "stdout"
         }
